# DWKB

./: .gitignore  README.md
.github/workflows/: kicad.yml  rust.yml
dwkb.pretty/: Kailh_Choc_V2_1.25u_PCB.kicad_mod  Kailh_Choc_V2_1.50u_PCB.kicad_mod  Kailh_Choc_V2_1.75u_PCB.kicad_mod  Kailh_Choc_V2_2.00u_PCB.kicad_mod
dwkb_left/: dwkb_left.kicad_pcb  dwkb_left.kicad_prl  dwkb_left.kicad_pro  dwkb_left.kicad_sch  fp-lib-table
hard/: design-note.md  fp-lib-table  hard.dcm  hard.kicad_pcb  hard.lib  hard.pro  hard.rules  hard.sch  kibot.yml  sym-lib-table
hard/hard.pretty/: Kailh_Choc_V2_1.00u_PCB.kicad_mod  Kailh_Choc_V2_2.25u_PCB.kicad_mod  Kailh_Choc_V2_2.75u_PCB.kicad_mod  SW_Cherry_MX_1.00u_PCB.kicad_mod
soft/: Cargo.toml  memory.x
soft/.cargo/: config
soft/src/: main.rs
