[package]
edition = "2018"
name = "dwkb-firm"
version = "0.1.0"

[[bin]]
name = "dwkb-firm"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
stm32-usbd = "0.6.0"
stm32l4 = {version="0.14.0", features=["stm32l412"]}
stm32l4xx-hal = {version = "0.6.0", features = ["stm32l4x2", "rt"]}

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
